# mlux

./: README.md  pyproject.toml
examples/: steering_examples.py
experiments/: binding_mechanisms.py  induction_head_analysis.py  induction_heads.md  steering_sweeps.py  test_head_patching_validation.py
mlux/: __init__.py  __main__.py  attention.py  hook_wrapper.py  hooked_model.py  steering.py  utils.py
mlux/experiments/: __init__.py  ablation.py  binding_mechanisms.py  induction_heads.py  logit_lens.py
mlux/tests/: __init__.py  test_steering.py
mlux/tools/: __init__.py  ablation_explorer.py  base_explorer.py  contrastive_steering_explorer.py  explorer_utils.py  logit_lens.py  logit_lens_explorer.py  patching_explorer.py  steering_explorer.py  validate_model.py
notes/: BUGFIX.md  EXPERIMENTAL_PLAN_V2.md  INTERPRETABILITY_RESEARCH.md  SESSION_NOTES.md
tests/: test_explorers.py  test_gqa.py  test_hooked_model.py  test_hooks_advanced.py  test_integration.py  test_kv_cache.py  test_misc.py  test_multi_model.py
